--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div id="game-container">
+        <h1 id="title">Tic Tac Toe</h1>
+        <div id="Scoreboard">
+            <div id="player1-score">Player 1 (X): 0</div>
+            <button id="reset-button">Reset Game</button>
+            <div id="player2-score">Player 2 (O): 0</div>
+        </div>
+        <div id="board">
+            <div id="row1">
+                <button data-index="0" class="boardSquare"></button>
+                <button data-index="1" class="boardSquare"></button>
+                <button data-index="2" class="boardSquare"></button>
+            </div>
+            <div id="row2">
+                <button data-index="3" class="boardSquare"></button>
+                <button data-index="4" class="boardSquare"></button>
+                <button data-index="5" class="boardSquare"></button>
+            </div>
+            <div id="row3">
+                <button data-index="6" class="boardSquare"></button>
+                <button data-index="7" class="boardSquare"></button>
+                <button data-index="8" class="boardSquare"></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
